--- a/packages/lerna-sandbox-package-three/package.json
+++ b/packages/lerna-sandbox-package-three/package.json
@@ -1,11 +1,7 @@
 {
   "name": "lerna-sandbox-package-three-semantic-release",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Package Three",
   "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "lerna-sandbox-package-four": "^1.0.13",
-    "lerna-sandbox-package-two": "^0.1.7"
-  }
+  "license": "MIT"
 }
