--- a/packages/lerna-sandbox-package-two/package.json
+++ b/packages/lerna-sandbox-package-two/package.json
@@ -1,10 +1,7 @@
 {
   "name": "lerna-sandbox-package-two-semantic-release",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Package Two",
   "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "lerna-sandbox-package-one": "^0.1.668"
-  }
+  "license": "MIT"
 }
