--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
       "@semantic-release/release-notes-generator",
       "@semantic-release/changelog",
       [
-        "@semantic-release/npm",
-        {
-          "npmPublish": false
-        }
+        "@semantic-release/npm"
       ],
       [
         "@semantic-release/git",
