--- a/packages/lerna-sandbox-package-two/package.json
+++ b/packages/lerna-sandbox-package-two/package.json
@@ -3,8 +3,8 @@
   "version": "1.2.0",
   "description": "Package Two",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
   "dependencies": {
-    "lerna-sandbox-package-four-semantic-release": "1.2.0",
+    "lerna-sandbox-package-four-semantic-release": "1.2.0"
   }
 }
