--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^9.0.0",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "semantic-release": "^19.0.2",
     "semantic-release-monorepo": "^7.0.5"
   }
