--- a/package.json
+++ b/package.json
@@ -1,34 +1,11 @@
 {
   "name": "lerna-sandbox-semantic-release-test",
-  "release": {
-    "extends": "semantic-release-monorepo",
-    "branches": [ "master" ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      [
-        "@semantic-release/npm"
-      ],
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "dist/",
-            "package.json",
-            "CHANGELOG.md"
-          ]
-        }
-      ],
-      "@semantic-release/github"
-    ]
-  },
   "workspaces": {
     "packages": [
       "packages/*"
     ]
   },
-  "version": "0.0.0-development",
+  "version": "0.2.0",
   "description": "Lerna Sandbox",
   "main": "index.js",
   "repository": "git+https://github.com/QuinnLee/lerna-sandbox",
@@ -53,6 +30,7 @@
     "@semantic-release/npm": "^9.0.0",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "semantic-release": "^19.0.2",
+    "semantic-release-lerna": "^0.4.2",
     "semantic-release-monorepo": "^7.0.5"
   }
 }
