--- a/releaserc.json
+++ b/releaserc.json
@@ -2,9 +2,10 @@
   "release": {
     "branches": ["master", "production"]
   },
+  "extends": "semantic-release-monorepo",
   "plugins": [
     "@semantic-release/commit-analyzer",
-    ["semantic-release-lerna", { "generateNotes": true }],
+    "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     [
       "@semantic-release/git",
@@ -21,6 +22,7 @@
         ]
       }
     ],
-    "@semantic-release/npm"
+    "@semantic-release/npm",
+    "@semantic-release/github"
   ]
 }
