--- a/releaserc.json
+++ b/releaserc.json
@@ -6,23 +6,20 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
+    "@semantic-release/npm",
+    "@semantic-release/github",
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "CHANGELOG.md"
+      }
+    ],
     [
       "@semantic-release/git",
       {
-        "assets": [
-          "packages/*/dist/",
-          "CHANGELOG.md",
-          "lerna.json",
-          "package.json",
-          "package-lock.json",
-          "lerna.json",
-          "packages/*/package.json",
-          "packages/*/package-lock.json"
-        ]
+        "assets": ["package.json", "package-lock.json", "CHANGELOG.md"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
-    ],
-    "@semantic-release/npm",
-    "@semantic-release/github"
+    ]
   ]
 }
