--- a/releaserc.json
+++ b/releaserc.json
@@ -17,8 +17,15 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["package.json", "package-lock.json", "CHANGELOG.md"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        "assets": [
+          "CHANGELOG.md",
+          "lerna.json",
+          "package.json",
+          "package-lock.json",
+          "lerna.json",
+          "packages/*/package.json",
+          "packages/*/package-lock.json"
+        ]
       }
     ]
   ]
