--- a/releaserc.json
+++ b/releaserc.json
@@ -7,6 +7,7 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/npm",
+    ["semantic-release-lerna", { "generateNotes": true }],
     "@semantic-release/github",
     [
       "@semantic-release/changelog",
