--- a/releaserc.json
+++ b/releaserc.json
@@ -1,19 +1,9 @@
 {
-  "release": {
-    "branches": ["master", "production"]
-  },
-  "extends": "semantic-release-monorepo",
+  "branches": ["master", "production"],
   "plugins": [
     "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/npm",
-    "@semantic-release/github",
-    [
-      "@semantic-release/changelog",
-      {
-        "changelogFile": "CHANGELOG.md"
-      }
-    ],
+    ["semantic-release-lerna", { "generateNotes": true }],
+    "@semantic-release/changelog",
     [
       "@semantic-release/git",
       {
