--- a/package.json
+++ b/package.json
@@ -24,13 +24,7 @@
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.2",
-    "@semantic-release/npm": "^9.0.0",
-    "@semantic-release/release-notes-generator": "^10.0.3",
     "semantic-release": "^19.0.2",
-    "semantic-release-lerna": "^0.4.2",
-    "semantic-release-monorepo": "^7.0.5"
+    "semantic-release-lerna": "^0.4.2"
   }
 }
