--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -17,7 +17,16 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build --if-present
-      - name: Release
+      - name: Release-packages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GIT_AUTHOR_NAME: ${{ github.actor }}
+          GIT_COMMITTER_NAME: ${{ github.actor }}
+          GIT_AUTHOR_EMAIL: "${{ github.actor }}@users.noreply.github.com"
+          GIT_COMMITTER_EMAIL: "${{ github.actor }}@users.noreply.github.com"
+        run: lerna exec --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo
+      - name: Release-changelog and tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
