--- a/releaserc.json
+++ b/releaserc.json
@@ -2,8 +2,15 @@
   "branches": ["master", "production"],
   "plugins": [
     "@semantic-release/commit-analyzer",
-    ["semantic-release-lerna", { "generateNotes": true }],
-    "@semantic-release/changelog",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
+    "@semantic-release/github",
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "CHANGELOG.md"
+      }
+    ],
     [
       "@semantic-release/git",
       {
