--- a/releaserc.json
+++ b/releaserc.json
@@ -3,8 +3,6 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/npm",
-    "@semantic-release/github",
     [
       "@semantic-release/changelog",
       {
@@ -24,6 +22,8 @@
           "packages/*/package-lock.json"
         ]
       }
-    ]
+    ],
+    "@semantic-release/npm",
+    "@semantic-release/github"
   ]
 }
