--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@qiwi/multi-semantic-release": "^3.17.1",
     "lerna": "3.19.0"
   },
   "engines": {
