--- a/releaserc.json
+++ b/releaserc.json
@@ -18,6 +18,7 @@
           "package.json",
           "package-lock.json",
           "lerna.json",
+          "packages/*/CHANGELOG.md",
           "packages/*/package.json",
           "packages/*/package-lock.json"
         ]
