--- a/releaserc.json
+++ b/releaserc.json
@@ -24,7 +24,7 @@
         ]
       }
     ],
-    "@semantic-release/npm",
-    "@semantic-release/github"
+    "@semantic-release/github",
+    "@semantic-release/npm"
   ]
 }
