--- a/releaserc.json
+++ b/releaserc.json
@@ -21,7 +21,8 @@
           "packages/*/CHANGELOG.md",
           "packages/*/package.json",
           "packages/*/package-lock.json"
-        ]
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci]"
       }
     ],
     "@semantic-release/github",
