--- a/releaserc.json
+++ b/releaserc.json
@@ -9,6 +9,7 @@
         "changelogFile": "CHANGELOG.md"
       }
     ],
+    "@semantic-release/npm",
     [
       "@semantic-release/git",
       {
@@ -25,7 +26,6 @@
         "message": "chore(release): ${nextRelease.version} [skip ci]"
       }
     ],
-    "@semantic-release/github",
-    "@semantic-release/npm"
+    "@semantic-release/github"
   ]
 }
